--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@
 title: Y² 的博客
 email: cameudis@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  料峭春风吹酒醒，微冷，山头斜照却相迎。回首向来萧瑟处，归去，也无风雨也无晴。
+  amor fati.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.cameudis.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: cameudis
